--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -10,8 +10,18 @@ nav ul {
     padding: 1%;
 }
 
+nav ul li strong {
+    text-transform: uppercase;
+    color: white;
+}
+
 nav ul li a {
     color: white;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    color: gray;
     text-decoration: none;
 }
 
@@ -24,16 +34,45 @@ nav ul li a {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 article {
     display: flex;
     flex-direction: column;
-    width: 48%;
+    width: 33%;
     background-color: lightgray;
     border-radius: 5px;
     padding: 1%;
+    margin: 0.5vh 0;
     justify-content: center;
+}
+
+.button {
+    margin: 0.5vh 0;
+    padding: 2% 5%;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: gray;
+    color: white;
+    text-decoration: none;
+}
+
+a {
+    color: blue;
+    text-decoration: none;
+}
+
+a:hover {
+    color: blue;
+    text-decoration: underline;
 }
 
 footer {
@@ -41,4 +80,8 @@ footer {
     text-align: center;
     color: white;
     padding: 1vh 0;
+}
+
+.denied {
+    cursor: not-allowed;
 }
