--- a/views/home.html
+++ b/views/home.html
@@ -15,10 +15,16 @@
         <nav>
             <ul>
                 <li>
+                    <strong>shopei</strong>
+                </li>
+                <li>
                     <a href="./home.html">Accueil</a>
                 </li>
                 <li>
                     <a href="https://enioaiello.github.io/admin-services/views/settings/account.html" target="_blank">Mon compte</a>
+                </li>
+                <li>
+                    <a href="#" class="denied"><i class="fa-solid fa-cart-shopping"></i></a>
                 </li>
             </ul>
         </nav>
@@ -34,19 +40,29 @@
                         <h4>Antoine</h4>
                         <p>Découvrez <strong>Antoine</strong>, un <strong>assistant textuel</strong> libre et gratuit pour <strong>macOS</strong> !</p>
                         <p><small>Disponible en Français et en Anglais</small></p>
-                        <p><a href="https://github.com/enioaiello/antoine/" target="_blank" class="button">Télécharger</a></p>
+                        <a href="https://github.com/enioaiello/antoine/" target="_blank" class="button">Télécharger</a>
                     </article>
                     <article>
                         <h4>Oto-Maintenance</h4>
                         <p>Maintenez votre ordinateur Windows simplement et rapidement.</p>
                         <p><small>Disponible en Français</small></p>
-                        <p><a href="https://github.com/enioaiello/Oto-Maintenance/releases/latest" target="_blank" class="button">Télécharger</a></p>
+                        <a href="https://github.com/enioaiello/Oto-Maintenance/releases/latest" target="_blank" class="button">Télécharger</a>
+                    </article>
+                    <article>
+                        <h4>LinOto-Maintenance</h4>
+                        <p>LinOto-Maintenance c'est des scripts qui permettent une meilleur installation de certains paquets et une meilleur MàJ de paquets sur Linux</p>
+                        <p><small>Disponible en Français</small></p>
+                        <a href="https://github.com/michaelafton938/LinOto-Maintenance" class="button">Télécharger</a>
                     </article>
                 </div>
             </section>
             <section class="announcements">
                 <h3>Dernières annonces</h3>
                 <div class="articleContain">
+                    <article>
+                        <h4>Déposez vos applications</h4>
+                        <p>Contactez <a href="mailto:aielloenio@icloud.com">cette adresse email</a> pour faire une demande de dépôt d'application ! Vous devez avoir un compte <strong>Admin Services</strong> vérifié en tant que développeur.</p>
+                    </article>
                     <article>
                         <h4>Connexion</h4>
                         <p>Utilisez votre compte <strong>Admin Services</strong> sur <strong>shopei</strong>. C'est simple et rapide !</p>
@@ -57,11 +73,21 @@
                     </article>
                 </div>
             </section>
+            <section id="updates">
+                <h3>Dernières mises à jour</h3>
+                <div class="articleContain">
+                    <article>
+                        <h4>Version 1.0.0</h4>
+                        <p>Cette version inclut 3 nouveaux programmes, 3 nouvelles annonces, la page de connexion avec <strong>Admin Services</strong>.</p>
+                    </article>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
         <p><small>&copy;2023, Enio Aiello. All right reserved.</small></p>
     </footer>
     <script src="../assets/js/log-check.js"></script>
+    <script src="https://kit.fontawesome.com/6ae91da3b0.js" crossorigin="anonymous"></script>
 </body>
 </html>
