--- a/views/home.html
+++ b/views/home.html
@@ -77,6 +77,10 @@
                 <h3>Dernières mises à jour</h3>
                 <div class="articleContain">
                     <article>
+                        <h4>Version 1.0.1</h4>
+                        <p>Cette version inclut une page d'inscription. Ce dernier permet de créer un compte pour avoir accès à <strong>SHOPEI</strong>. Si vous crééez un compte sur <strong>SHOPEI</strong> et que vous avez un compte <strong>Admin Services</strong> vous aurez toutes les informations concernant votre compte sur <strong>Admin Services</strong>.</p>
+                    </article>
+                    <article>
                         <h4>Version 1.0.0</h4>
                         <p>Cette version inclut 3 nouveaux programmes, 3 nouvelles annonces, la page de connexion avec <strong>Admin Services</strong>.</p>
                     </article>
