--- a/views/login.html
+++ b/views/login.html
@@ -14,8 +14,9 @@
 <div class="container">
     <h2>Bienvenue</h2>
     <p>Connectez-vous avec <a href="https://enioaiello.github.io/admin-services">Admin Services</a> pour commencer.</p>
+    <p>Vous n'avez pas de comptes ? <a href="./register.html" id="registerAction">Créez-en un !</a></p>
     <p id="compteUniverselError">Le compte universel n'est pas compatible. Déconnectez-vous du compte universel depuis <strong>Admin Services</strong>.</p>
-    <script src="../assets/js/login-page.js"></script>
 </div>
+<script src="../assets/js/login-page.js"></script>
 </body>
 </html>
