--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,7 @@
                     <a href="https://enioaiello.github.io/admin-services/views/settings/account.html" target="_blank">Mon compte</a>
                 </li>
                 <li>
-                    <a href="#" class="denied"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="https://enioaiello.github.io/admin-services/views/settings/shopei.html" class="denied" target="_blank"><i class="fa-solid fa-cart-shopping"></i></a>
                 </li>
             </ul>
         </nav>
@@ -40,19 +40,19 @@
                         <h4>Antoine</h4>
                         <p>Découvrez <strong>Antoine</strong>, un <strong>assistant textuel</strong> libre et gratuit pour <strong>macOS</strong> !</p>
                         <p><small>Disponible en Français et en Anglais</small></p>
-                        <a href="https://github.com/enioaiello/antoine/" target="_blank" class="button">Télécharger</a>
+                        <a href="#" class="button" id="antoineDownloadButton">Télécharger</a>
                     </article>
                     <article>
                         <h4>Oto-Maintenance</h4>
                         <p>Maintenez votre ordinateur Windows simplement et rapidement.</p>
                         <p><small>Disponible en Français</small></p>
-                        <a href="https://github.com/enioaiello/Oto-Maintenance/releases/latest" target="_blank" class="button">Télécharger</a>
+                        <a href="#" target="_blank" class="button" id="otoMaintenanceDownloadButton">Télécharger</a>
                     </article>
                     <article>
                         <h4>LinOto-Maintenance</h4>
                         <p>LinOto-Maintenance c'est des scripts qui permettent une meilleur installation de certains paquets et une meilleur MàJ de paquets sur Linux</p>
                         <p><small>Disponible en Français</small></p>
-                        <a href="https://github.com/michaelafton938/LinOto-Maintenance" class="button">Télécharger</a>
+                        <a href="#" class="button" id="linOtoMaintenanceDownloadButton">Télécharger</a>
                     </article>
                 </div>
             </section>
@@ -77,6 +77,11 @@
                 <h3>Dernières mises à jour</h3>
                 <div class="articleContain">
                     <article>
+                        <h4>Version 1.1.0</h4>
+                        <p>Cette version ajoute les achats. Ils vous permettent de retrouver vos achats directement sur votre compte <strong>Admin Services</strong>.</p>
+                        <p><strong>Note :</strong> Il vous faudra un compte <strong>Admin Services</strong> actif. Cela peut-être un compte inscrit, réservé uniquement sur votre appareil, ou un compte développeur prédéfini.</p>
+                    </article>
+                    <article>
                         <h4>Version 1.0.1</h4>
                         <p>Cette version inclut une page d'inscription. Ce dernier permet de créer un compte pour avoir accès à <strong>SHOPEI</strong>. Si vous crééez un compte sur <strong>SHOPEI</strong> et que vous avez un compte <strong>Admin Services</strong> vous aurez toutes les informations concernant votre compte sur <strong>Admin Services</strong>.</p>
                     </article>
@@ -92,6 +97,7 @@
         <p><small>&copy;2023, Enio Aiello. All right reserved.</small></p>
     </footer>
     <script src="../assets/js/log-check.js"></script>
+    <script src="../assets/js/buy.js"></script>
     <script src="https://kit.fontawesome.com/6ae91da3b0.js" crossorigin="anonymous"></script>
 </body>
 </html>
