--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,7 @@
                     <a href="https://enioaiello.github.io/admin-services/views/settings/account.html" target="_blank">Mon compte</a>
                 </li>
                 <li>
-                    <a href="https://enioaiello.github.io/admin-services/views/settings/shopei.html" class="denied" target="_blank"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="https://enioaiello.github.io/admin-services/views/settings/shopei.html" target="_blank"><i class="fa-solid fa-cart-shopping"></i></a>
                 </li>
             </ul>
         </nav>
@@ -59,7 +59,7 @@
             <section class="announcements">
                 <h3>Dernières annonces</h3>
                 <div class="articleContain">
-                    <article>
+                    <!-- <article>
                         <h4>Déposez vos applications</h4>
                         <p>Contactez <a href="mailto:aielloenio@icloud.com">cette adresse email</a> pour faire une demande de dépôt d'application ! Vous devez avoir un compte <strong>Admin Services</strong> vérifié en tant que développeur.</p>
                     </article>
@@ -70,12 +70,16 @@
                     <article>
                         <h4>Ouverture !</h4>
                         <p>Ouverture de <strong>shopei</strong> sur le réseau <strong>Admin Services</strong> et <strong>Corundum</strong>.</p>
-                    </article>
+                    </article> -->
                 </div>
             </section>
             <section id="updates">
                 <h3>Dernières mises à jour</h3>
                 <div class="articleContain">
+                    <article>
+                        <h4>Version 1.1.1</h4>
+                        <p>Cette version améliore le site et sa sécurité.</p>
+                    </article>
                     <article>
                         <h4>Version 1.1.0</h4>
                         <p>Cette version ajoute les achats. Ils vous permettent de retrouver vos achats directement sur votre compte <strong>Admin Services</strong>.</p>
@@ -98,6 +102,7 @@
     </footer>
     <script src="../assets/js/log-check.js"></script>
     <script src="../assets/js/buy.js"></script>
+    <script src="../assets/js/announcements.js"></script>
     <script src="https://kit.fontawesome.com/6ae91da3b0.js" crossorigin="anonymous"></script>
 </body>
 </html>
