--- a/views/thank.html
+++ b/views/thank.html
@@ -15,22 +15,23 @@
         <nav>
             <ul>
                 <li>
-                    <strong>shopei</strong>
+                    <strong>🛍️ shopei</strong>
                 </li>
                 <li>
-                    <a href="./home.html">Accueil</a>
+                    <a href="./home.html">🏡 Accueil</a>
                 </li>
                 <li>
-                    <a href="https://enioaiello.github.io/admin-services/views/settings/account.html" target="_blank">Mon compte</a>
+                    <a href="https://enioaiello.github.io/admin-services/views/settings/account.html" target="_blank">👤 Mon compte</a>
                 </li>
                 <li>
-                    <a href="https://enioaiello.github.io/admin-services/views/settings/shopei.html" class="denied" target="_blank"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="https://enioaiello.github.io/admin-services/views/settings/shopei.html" target="_blank">🛒 Mes achats</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="container">
+            <p>👍</p>
             <h2>Merci !</h2>
             <p>Votre achat à bien été pris en compte.</p>
             <p>Votre téléchargement devrait s'être ouvert dans une nouvelle page.</p>
@@ -42,6 +43,5 @@
     </footer>
     <script src="../assets/js/log-check.js"></script>
     <script src="../assets/js/buy.js"></script>
-    <script src="https://kit.fontawesome.com/6ae91da3b0.js" crossorigin="anonymous"></script>
 </body>
 </html>
