--- a/views/home.html
+++ b/views/home.html
@@ -15,22 +15,23 @@
         <nav>
             <ul>
                 <li>
-                    <strong>shopei</strong>
+                    <strong>🛍️ shopei</strong>
                 </li>
                 <li>
-                    <a href="./home.html">Accueil</a>
+                    <a href="./home.html">🏡 Accueil</a>
                 </li>
                 <li>
-                    <a href="https://enioaiello.github.io/admin-services/views/settings/account.html" target="_blank">Mon compte</a>
+                    <a href="https://enioaiello.github.io/admin-services/views/settings/account.html" target="_blank">👤 Mon compte</a>
                 </li>
                 <li>
-                    <a href="https://enioaiello.github.io/admin-services/views/settings/shopei.html" target="_blank"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="https://enioaiello.github.io/admin-services/views/settings/shopei.html" target="_blank">🛒 Mes achats</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="container">
+            <p>🏡</p>
             <h2 id="welcomeText">Bienvenue null</h2>
             <section id="startHere">
                 <h3>Démarrez ici</h3>
@@ -77,6 +78,10 @@
                 <h3>Dernières mises à jour</h3>
                 <div class="articleContain">
                     <article>
+                        <h4>Version 1.1.2</h4>
+                        <p>Nouveau design et aspect du site.</p>
+                    </article>
+                    <article>
                         <h4>Version 1.1.1</h4>
                         <p>Cette version améliore le site et sa sécurité.</p>
                     </article>
@@ -103,6 +108,5 @@
     <script src="../assets/js/log-check.js"></script>
     <script src="../assets/js/buy.js"></script>
     <script src="../assets/js/announcements.js"></script>
-    <script src="https://kit.fontawesome.com/6ae91da3b0.js" crossorigin="anonymous"></script>
 </body>
 </html>
