--- a/views/home.html
+++ b/views/home.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <div class="container">
-            <p>🏡</p>
+            <p class="headingSmiley">🏡</p>
             <h2 id="welcomeText">Bienvenue null</h2>
             <section id="startHere">
                 <h3>Démarrez ici</h3>
@@ -60,23 +60,16 @@
             <section class="announcements">
                 <h3>Dernières annonces</h3>
                 <div class="articleContain">
-                    <!-- <article>
-                        <h4>Déposez vos applications</h4>
-                        <p>Contactez <a href="mailto:aielloenio@icloud.com">cette adresse email</a> pour faire une demande de dépôt d'application ! Vous devez avoir un compte <strong>Admin Services</strong> vérifié en tant que développeur.</p>
-                    </article>
-                    <article>
-                        <h4>Connexion</h4>
-                        <p>Utilisez votre compte <strong>Admin Services</strong> sur <strong>shopei</strong>. C'est simple et rapide !</p>
-                    </article>
-                    <article>
-                        <h4>Ouverture !</h4>
-                        <p>Ouverture de <strong>shopei</strong> sur le réseau <strong>Admin Services</strong> et <strong>Corundum</strong>.</p>
-                    </article> -->
+
                 </div>
             </section>
             <section id="updates">
                 <h3>Dernières mises à jour</h3>
                 <div class="articleContain">
+                    <article>
+                        <h4>Version 1.1.3</h4>
+                        <p>Correction de l'apparence du site.</p>
+                    </article>
                     <article>
                         <h4>Version 1.1.2</h4>
                         <p>Nouveau design et aspect du site.</p>
