--- a/views/login.html
+++ b/views/login.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <p>😁</p>
+    <p class="headingSmiley">😁</p>
     <h2>Bon retour parmis nous !</h2>
     <p>Connectez-vous avec <a href="https://enioaiello.github.io/admin-services">Admin Services</a> pour commencer.</p>
     <p>Vous n'avez pas de comptes ? <a href="./register.html" id="registerAction">Créez-en un !</a></p>
