--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <p>👋</p>
+    <p class="headingSmiley">👋</p>
     <h2>Bienvenue</h2>
     <p>Vous pouvez créez un compte temporaire pour accéder aux pages de téléchargements des différents produits. Celui-ci s'effacera si vous changez d'ordinateur.</p>
     <p>Celui-ci s'applique uniquement sur <strong>SHOPEI</strong>, si vous avez un compte <strong>Admin Services</strong> votre identifiant sera enregistré dans les paramètres de votre compte d'utilisateur.</p>
