--- a/views/thank.html
+++ b/views/thank.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <div class="container">
-            <p>👍</p>
+            <p class="headingSmiley">👍</p>
             <h2>Merci !</h2>
             <p>Votre achat à bien été pris en compte.</p>
             <p>Votre téléchargement devrait s'être ouvert dans une nouvelle page.</p>
